post update script

--- a/composer.json
+++ b/composer.json
@@ -37,5 +37,8 @@
         "psr-4": {
             "EESC\\": "src"
         }
+    },
+    "scripts": {
+        "post-update-cmd": "EESC\\Theme::postInstall"
     }
 }
