testando composer-assets-installer

--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         }
     ],
     "extra": {
+        "asset-dir": "asset",
         "installer-types": [
             "bower-asset",
             "npm-asset"
